--- a/physics.html
+++ b/physics.html
@@ -79,8 +79,27 @@
             </div>
         </div>
 
+        <div class="row">
+            <div class="col-md-offset-2 col-md-4">
+                <p class="physics-text text-left">
+                    I=V/R<br>
+                    I=5/2.7<br>
+                    I=1.852 amps
+                </p>
+            </div>
+            <div class="col-md-4">
+                <p class="physics-text text-left">
+                    I=V/R<br>
+                    I=1.5/1<br>
+                    I=1.5 amps
+                </p>
+            </div>
+        </div>
+
+
     </div>
 </div>
+
 
 <!-- ================================FOOTER================================ -->
 
